--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Todo list MVC</title>
-    <script src="js/todo/controller/task.js"></script>
-    <script src="js/todo/model/taskModel.js"></script>
-    <script src="js/todo/model/task.js"></script>
-    <script src="js/todo/view/task.js"></script>
-    <script src="js/todo/view/taskAddForm.js"></script>
-    <script src="js/todo/index.js"></script>
-    <link href="css/task.css" rel="stylesheet" type="text/css">
+    <script src="js/bundle.js"></script>
+    <link href="src/css/task.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>ToDo list example - GeekHub JS</header>
