webpack - added webpack-dev-server wih dependencies

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Todo list MVC</title>
-    <script src="js/bundle.js"></script>
-    <link href="src/css/task.css" rel="stylesheet" type="text/css">
+    <script src="dist/bundle.js"></script>
+    <link href="dist/task.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>ToDo list example - GeekHub JS</header>
